test/fails/bad_types/bad_if2.lgl
bool b = 1 == 1;
if (b) { int x = 5; } else { int x = false; }